<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient_1">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_title"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            app:srcCompat="@drawable/topping" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40px"
            android:text="@string/app_title"
            android:textSize="24dp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="20dp"
        android:background="@color/fade_blue" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/personal_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10px"
                    android:text="@string/personal_title"
                    android:textSize="24dp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50px"
                        android:layout_weight="5"
                        android:text="@string/name_hint" />

                    <EditText
                        android:id="@+id/editName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50px"
                        android:background="@drawable/textbox"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:text=" " />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/phoneNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="50px"
                        android:layout_weight="5"
                        android:text="@string/number_hint" />

                    <EditText
                        android:id="@+id/editNumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50px"
                        android:background="@drawable/textbox"
                        android:ems="10"
                        android:inputType="phone"
                        android:text=" " />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20px"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/pax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginLeft="50px"
                        android:layout_weight="5"
                        android:text="@string/size_hint" />

                    <EditText
                        android:id="@+id/editPax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="50px"
                        android:background="@drawable/textbox"
                        android:ems="10"
                        android:inputType="phone"
                        android:text=" " />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="20dp"
                android:background="@color/fade_blue" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/smoke_set"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/smoke_title"
                    android:textSize="18dp"
                    android:textStyle="bold" />

                <ToggleButton
                    android:id="@+id/smokeYesNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/buttons"
                    android:textColor="@color/textBlue"
                    android:textOff="Non-Smoking area"
                    android:textOn="Smoking area" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/time_title"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:timePickerMode="spinner" />

                    <TextView
                        android:id="@+id/date_set"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10px"
                        android:text="@string/date_title"
                        android:textSize="18dp"
                        android:textStyle="bold" />

                    <DatePicker
                        android:id="@+id/datePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:calendarViewShown="false"
                        android:datePickerMode="spinner" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:background="@color/fade_blue" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:text="@string/submit" />

                    <Button
                        android:id="@+id/btnReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:background="@drawable/buttons"
                        android:text="@string/reset" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>